# ChangeLog for dev-libs/shhopt
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/shhopt/ChangeLog,v 1.9 2008/01/25 02:28:40 hawking Exp $

  25 Jan 2008; Ali Polatel <hawking@gentoo.org> metadata.xml,
  -shhopt-1.1.7-r1.ebuild:
  Add myself as maintainer. Drop old.

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing dholm from metadata.xml as per #24623. Assigning to maintainer-needed.

  14 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  25 Jan 2007; Steve Dibb <beandog@gentoo.org> shhopt-1.1.7.ebuild,
  shhopt-1.1.7-r1.ebuild:
  add ~amd64, bug 161227

*shhopt-1.1.7-r2 (10 Jan 2007)

  10 Jan 2007; Mike Frysinger <vapier@gentoo.org>
  +files/shhopt-1.1.7-build.patch, +shhopt-1.1.7-r2.ebuild:
  Cleanup build and add amd64 love.

*shhopt-1.1.7-r1 (14 Dec 2006)

  14 Dec 2006; Charlie Shepherd <masterdriverz@gentoo.org>
  +shhopt-1.1.7-r1.ebuild:
  Bump to 1.1.7-r1 to fix bug 132065; thanks to Stefano Balocco

  20 Dec 2005; Andrej Kacian <ticho@gentoo.org> shhopt-1.1.7.ebuild:
  Added ~x86 keyword.

*shhopt-1.1.7 (01 Mar 2004)

  01 Mar 2004; David Holm <dholm@gentoo.org> metadata.xml,
  shhopt-1.1.7.ebuild:
  Initial import.
