@@ -1,6 +1,6 @@
 AUX shhopt-1.1.7-build.patch 1880 RMD160 89cd4aa599e35db489806cc37537678c186515cf SHA1 93d3e3c3ff3e557ae48efb2bd18312f798e81af3 SHA256 0d16fbb3816e422b576dd100eb40c4b5d8f8d4898f0e64939430ae2486aa98d8
 DIST shhopt-1.1.7.tar.gz 9923 RMD160 f987c4682d5119f73bf4c67693d9a83a85397408 SHA1 122103c9076e26087e0bd99e9745b2987700b268 SHA256 bae94335124efa6fcc2f0a55cabd68c9c90be935bcdb8054d7e5188e0d5da679
-EBUILD shhopt-1.1.7-r2.ebuild 804 RMD160 429b055eb037a2057d443cd8ba59dd9701260ffe SHA1 358c072a89db4a65e0254c1a6ac4b6795dcfd477 SHA256 607c07fbb2ca09e5c04081413f6f8d5e1d7edceb2ec53ba3a0d2e3245f88ca65
+EBUILD shhopt-1.1.7-r2.ebuild 805 RMD160 09b99e6785cd50bd91ad67024928af768b06fe7b SHA1 80455c7bbae5eb4fc640ec4faaf0d09f7fe0c069 SHA256 52cc1ca39d4b95755198e62fc96d6a752434ef3db0def1ec7b8eba61a1263316
 EBUILD shhopt-1.1.7.ebuild 572 RMD160 c0f986b9bd304ce8f7e2ea1de4e5028ea18a9424 SHA1 6a40a53b76a029127bf32770fe85a3c07e8b9e22 SHA256 6f8cef28e9ffd36b25f57ae6cdfc3a0c252219b1e3e3ca8625915489de058404
-MISC ChangeLog 1275 RMD160 4404e20be29470d331d9fdbdc8dadf9c38ca54da SHA1 ef15c7a5ade6c3bb5ed79dc20282e8672d09ab36 SHA256 3f15491452267af52165993772a43c39bd1f5d9deaa940dd70bf001dc0ef5cbe
+MISC ChangeLog 1373 RMD160 0989b4f02902bc1a14f6764a5131a8c82118c21a SHA1 4fa758767ec36d84c6172215f79d70d380f63d34 SHA256 20b867909ae835d48de462878028ee4d45a6e97ae842e5c001cce510eed82a6c
 MISC metadata.xml 421 RMD160 b93310f6b0cd782a748541b7c523d74c55a67655 SHA1 2238daca7a079824bc87800a2c58b6111559a611 SHA256 bd59f15c3d5ee846b9360842af3399239bea2cb7276087b6952d08f906455816
